@@ -389,7 +389,7 @@ It is also possible to exclude test suites from specified subfolders. This is do
 
 ### PHPT tests
 
-Automated tests runner can also run .phpt files in the provided folder, you just need to add package *konecnyjakub/phpt-runner* to your (dev) dependencies. If you want to (temporarily) disable .phpt tests, pass *--noPhpt* to the script. It is not possible to disable tests in specific subfolders with *--filterExceptFolders* at the moment.
+Automated tests runner can also run .phpt files in the provided folder, you just need to add package *konecnyjakub/phpt-runner* to your (dev) dependencies. If you want to (temporarily) disable .phpt tests, pass *--noPhpt* to the script.
 
 All .phpt files are considered one test suite, each file is reported as a test just like a method in a TestCase descendant.
 
